<resources>
    <string name="app_name">Parent Assistant</string>
    <string name="api_key"></string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="settings_file">settings</string>
    <string name="setting_radius">radius</string>
    <string name="setting_schedule">schedule</string>
    <string name="toast_turn_on_internet">Turn on Internet</string>
    <string name="toast_start_search">Start search</string>
    <string name="toast_no_elements">There are no elements suitable for these parameters</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_turn_on">Turn on</string>
    <string name="dialog_turn_on_gps">Turn on GPS</string>
    <string name="user_data_file">user_data</string>
    <string name="network_data_file">network_data</string>
    <string-array name="mapTags">
        <item>photo</item>
        <item>name</item>
        <item>age</item>
        <item>hobbies</item>
    </string-array>
    <string name="save_button">Save</string>
    <string name="search_button">Search</string>
    <string name="confirm_button">Confirm</string>
    <string name="radius_text_view">Radius</string>
    <string name="image_type">image/jpg</string>
    <string name="note_addition_button">Add</string>
    <string name="description_photo">Your photo</string>
    <string name="description_close">Close</string>
    <string name="description_element_deleting">Delete element</string>
    <string name="description_buggy">Buggy</string>
    <string name="description_walk">Walk</string>
    <string name="hint_name_edit_text">Name:</string>
    <string name="hint_age_edit_text">Age:</string>
    <string name="hint_hobbies_edit_text">Hobbies:</string>
    <string name="hint_your_message_edit_text">   Your message</string>
    <string name="name_text_view">Name:</string>
    <string name="age_text_view">Age:</string>
    <string name="hobbies_text_view">Hobbies:</string>
    <string name="alert_request">Request</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_ok">OK</string>
    <string name="alert_title">Profile Information</string>
    <string name="pre_name">Name: </string>
    <string name="pre_age">Age: </string>
    <string name="pre_hobby">Hobbies: </string>
    <string name="pre_format">%1$s %2$s</string>
    <string name="pre_message_format">%1$s:%2$s</string>
    <string name="shared_update_account">update</string>
    <string name="shared_id">id</string>
    <string name="google_identifier">google_identifier</string>
    <string name="subscriber_doesnt_answer">User is not responding</string>
    <string name="subscriber_broke_connection">User has disconnected</string>
    <string name="subscriber_rejected">User has refused</string>
    <string name="subscriber_not_connection">Connection problems</string>
    <string name="companion_is_offline">User is offline</string>
    <string name="busy_request">Busy</string>
    <string name="no_internet">No Internet</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="walk_type">Select type of walk</string>
    <string name="is_request">There is request for a walk</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="messages">Messages</string>
    <string name="send">Send</string>
    <string name="simple_image_view">Image view</string>
    <string name="intent_extra_id">id</string>
    <string name="intent_extra_type">type</string>
    <string name="notification_request_title">Request</string>
    <string name="notification_request_text">Request from ...</string>
    <string name="time">HH:mm</string>
    <string name="search">Search</string>
    <string name="event">Events</string>
    <string name="filter_button">Filter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sub_map">Select a place</string>
    <string name="seek">Find</string>
    <string name="from_time_picker">From</string>
    <string name="to_time_picker">To</string>
    <string name="not_filled">Not all fields filled</string>
    <string name="look_in_place">Look at the place</string>
    <string name="request">Send</string>
    <string name="bad_message_state">Error</string>
    <string name="font_family">sans-serif</string>
    <string name="returning_old_account">Do you want to restore your old account?</string>
    <string name="failed">Failed</string>

</resources>
