<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:orderInCategory="1"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/signed_in"
        android:orderInCategory="2"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/account"
        android:title="@string/account"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/schedule"
        android:title="@string/setting_schedule"
        app:showAsAction="ifRoom" />
</menu>