<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.AccountActivity">
    <ListView
        android:id="@+id/dataList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:id="@+id/add_element_button"
        android:text="@string/add_note_button"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/button_add"
        android:elevation="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <LinearLayout
        android:id="@+id/add_element_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:baselineAligned="false"
        android:visibility="invisible">
        <LinearLayout
            android:layout_weight="5"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/upload_image_view"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/face"
                android:contentDescription="@string/description_photo" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="10"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_name_edit_text"/>
            <EditText
                android:id="@+id/age_edit_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_age_edit_text"/>
            <EditText
                android:id="@+id/hobbies_edit_text"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_hobbies_edit_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_gravity="right|top"
                android:id="@+id/close_note_image_button"
                android:src="@drawable/delete_element"
                android:contentDescription="@string/description_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/save_note_button"
                android:text="@string/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
