<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schedule.SearchFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/filter_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/addition_button"
        android:padding="5dp"
        android:text="@string/filter_button" />

    <LinearLayout
        android:id="@+id/filter_container"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/filter_dialog"
        android:elevation="3dp"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/from_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/from" />

            <TextView
                android:id="@+id/to_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/from_text_view"
                android:text="@string/to" />

            <EditText
                android:id="@+id/from_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/from_text_view"
                android:layout_below="@id/from_text_view"
                android:ems="5"
                android:hint="@string/from"
                android:inputType="text" />

            <EditText
                android:id="@+id/to_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/to_text_view"
                android:layout_below="@id/from_text_view"
                android:layout_toEndOf="@id/from_edit_text"
                android:ems="5"
                android:hint="@string/to"
                android:inputType="text" />

            <Button
                android:id="@+id/choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/from_edit_text"
                android:layout_below="@id/from_edit_text"
                android:backgroundTint="@color/addition_button"
                android:text="@string/sub_map" />

            <Button
                android:id="@+id/search_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/to_edit_text"
                android:layout_below="@id/to_edit_text"
                android:backgroundTint="@color/addition_button"
                android:text="@string/seek" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>